# cv-extract-json

./: README.md  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
scripts/: demo.py  make_viz.py
src/: data.py  extract.py  generator.py  schema.py  verbatim.py
tests/: test_generator.py  test_verbatim.py
