[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-extract-json"
version = "0.1.0"
description = "Structured CV extraction with strict JSON schema and anti-hallucination guarantees."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mathis Lacombe" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "torch>=2.2.0,<2.6.0",
    "transformers>=4.40,<5.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20",
    "faker>=24.0",
    "pydantic>=2.5",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Mathos34/cv-extract-json"
Repository = "https://github.com/Mathos34/cv-extract-json"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["assets", "runs", "data", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (matplotlib viz code legitimately exceeds)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = [
    "E402",  # imports after sys.path manipulation
    "E702",  # `ax.set_xlabel(...); ax.set_ylabel(...)` matplotlib idiom
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
